--- a/p8105_hw3_yh3094.md
+++ b/p8105_hw3_yh3094.md
@@ -55,20 +55,20 @@ In 2002, CT, FL and NC were observed at 7 locations.
 Make a “spaghetti plot”
 -----------------------
 
-The code chunk below makes a “spaghetti plot” which shows the number of observations in each state from 2002 to 2010.
+The code chunk below makes a “spaghetti plot” that shows the number of locations in each state from 2002 to 2010.
 
 ``` r
 brfss_data %>% 
   group_by(year, locationabbr) %>% 
-  summarize(n_observation = sum(sample_size)) %>% 
-  ggplot(aes(x = year, y = n_observation, color = locationabbr)) +
+  summarize(n_location = n_distinct(locationdesc)) %>% 
+  ggplot(aes(x = year, y = n_location, color = locationabbr)) +
   geom_line() +
   labs(title = "The spaghetti plot")
 ```
 
 ![](p8105_hw3_yh3094_files/figure-markdown_github/spaghetti_plot-1.png)
 
-The number of observations didn't change a lot over the years in most states, although some states, like FL, MA and WA, have the number of observations changing from thousands to ten thousands.
+From 2002 to 2010, the number of locations in most states was fewer than 10. In FL, the number of locations had the biggest change over time. Before 2007, the number of locations in FL was fewer than 10 each year, while in 2007, the number of locations in FL was up to 44. Then, the number of locations in FL decreased to fewer than 10 again. However, in 2010, the number of locations in FL increased to 41.
 
 Make a table
 ------------
@@ -132,8 +132,8 @@ brfss_data %>%
   ggplot(aes(x = factor(year), y = mean_response_proportion)) +
   facet_grid(~response) +
   geom_violin(aes(fill = factor(year))) +
-  stat_summary(fun.y = median, geom = "point", size = 2) +
-  labs(title = "The five-panel plot")
+  stat_summary(fun.y = median, geom = "point") +
+  labs(x = "Year", y = "State-level averages", title = "The five-panel plot")
 ```
 
 ![](p8105_hw3_yh3094_files/figure-markdown_github/five_panel_plot-1.png)
@@ -148,7 +148,7 @@ Import the Instacart data
 
 ``` r
 data("instacart")
-instacart = janitor::clean_names(instacart) ## clean variable names
+instacart = janitor::clean_names(instacart)
 skimr::skim(instacart)
 ```
 
@@ -189,19 +189,13 @@ skimr::skim(instacart)
     ##       0       1       1       1 <U+2586><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581><U+2587>
     ##   51732   1e+05  154959  206209 <U+2587><U+2587><U+2587><U+2587><U+2587><U+2587><U+2587><U+2587>
 
-write a short description of the dataset, noting the size and structure of the data, describing some key variables, and giving illstrative examples of observations.
+Write a short description of the dataset, noting the size and structure of the data, describing some key variables, and giving illstrative examples of observations.
 
 The Instacart data has 1384617 observations and 15 variables. Variables for `aisle`, `department`, `eval_set` and `product_name` are class `character` and other variables are class `integer`. The dataset contains products of 39,123 different names bought from 134 different aisles within 21 departments. 0.6 of all items ordered have been ordered by the user in the past. Among those items which have been ordered before, Banana is the most popular. Most orders were placed at 14 ± 4.2 hours of the day.
 
-The distribution of orders placed at which day of the week are shown below.
+The first observation is Bulgarian Yogurt (product id: 49302) bought from the yogurt aisle (aisle id: 120) of the dairy eggs department (department id: 16) by the user whose id is 112108. The order (order id: 1) was placed at 10 on Thursday. The order sequence number for this user is 4. This product was the first product added to cart by this user and has been ordered before. 9 days has past since the last order placed by this user. The evaluation set this order belongs in is train.
 
-``` r
-instacart %>% 
-  count(order_dow) %>% 
-  ggplot(aes(x = factor(order_dow), y = n)) + geom_bar(stat = "identity")
-```
-
-![](p8105_hw3_yh3094_files/figure-markdown_github/order_placed_day-1.png)
+The ninth observation is Grated Pecorino Romano Cheese (product id: 39612) bought from the specialty cheeses aisle (aisle id: 2) of the dairy eggs department (department id: 16) by the user whose id is 79431. The order (order id: 36) was placed at 18 on Saturday. The order sequence number for this user is 23. This product was the first product added to cart by this user and hasn't been ordered before. 30 days has past since the last order placed by this user. The evaluation set this order belongs in is train.
 
 Calculate the number of aisles and find out the most frequent
 -------------------------------------------------------------
@@ -232,89 +226,17 @@ Make a plot
 
 The code chunk below makes a plot that shows the number of items ordered in each aisle. Order aisles sensibly, and organize your plot so others can read it.
 
-Solution a
-
 ``` r
 instacart %>%
   count(aisle) %>%
-  pull(n) %>% 
-  quantile
-```
-
-    ##       0%      25%      50%      75%     100% 
-    ##    287.0   1464.5   4723.0  12020.0 150609.0
-
-``` r
-aisle_p1 = 
-  instacart %>%
-  count(aisle) %>%
-  filter(n %in% quantile(n, 0):quantile(n, 0.25)) %>% 
   ggplot(aes(x = forcats::fct_reorder(aisle, n), y = n)) +
   geom_bar(stat = "identity") +
-  labs(x = "aisle", y = "number of items") +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-
-
-aisle_p2 = 
-  instacart %>%
-  count(aisle) %>% 
-  filter(n %in% 1464:4723) %>% 
-  ggplot(aes(x = forcats::fct_reorder(aisle, n), y = n)) +
-  geom_bar(stat = "identity") +
-  labs(x = "aisle", y = "number of items") +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-
-aisle_p3 =
-  instacart %>%
-  count(aisle) %>%
-  filter(n %in% quantile(n, 0.5):quantile(n, 0.75)) %>% 
-  ggplot(aes(x = forcats::fct_reorder(aisle, n), y = n)) +
-  geom_bar(stat = "identity") +
-  labs(x = "aisle", y = "number of items") +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-
-aisle_p4 =
-  instacart %>%
-  count(aisle) %>%
-  filter(n %in% quantile(n, 0.75):quantile(n, 1)) %>% 
-  ggplot(aes(x = forcats::fct_reorder(aisle, n), y = n)) +
-  geom_bar(stat = "identity") +
-  labs(x = "aisle", y = "number of items") +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-
-aisle_p1/aisle_p2/aisle_p3/aisle_p4
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, size = 8)) +
+  labs(x = "Aisle", y = "Number of items", 
+       title = "The number of items ordered in each aisle")
 ```
 
 ![](p8105_hw3_yh3094_files/figure-markdown_github/aisle_plot-1.png)
-
-Solution b
-
-``` r
-instacart %>% 
-  count(aisle) %>% 
-  ggplot(aes(x = n)) +
-  geom_histogram() +
-  labs(x = "Number of items", y = "Number of aisles")
-```
-
-    ## `stat_bin()` using `bins = 30`. Pick better value with `binwidth`.
-
-![](p8105_hw3_yh3094_files/figure-markdown_github/aisle_plot_2-1.png)
-
-``` r
-instacart %>% 
-  count(aisle) %>% 
-  top_n(3)
-```
-
-    ## Selecting by n
-
-    ## # A tibble: 3 x 2
-    ##   aisle                           n
-    ##   <chr>                       <int>
-    ## 1 fresh fruits               150473
-    ## 2 fresh vegetables           150609
-    ## 3 packaged vegetables fruits  78493
 
 The number of items ordered in most aisles are below 25,000, although in some aisles, like "fresh fruits" and "fresh vegetables", the number of items ordered are quite large, more than 150,000.
 
@@ -351,17 +273,24 @@ The code chunk below makes a table showing the mean hour of the day at which Pin
 
 ``` r
 instacart %>% 
+  ## Convert order_dow from numeric to character
+  mutate(
+    order_dow = recode(order_dow, "0" = "Sunday", "1" = "Monday", "2" = "Tuesday", "3" = "Wednesday", "4" = "Thursday", "5" = "Friday", "6" = "Saturday")
+  ) %>%
+  mutate(
+    order_dow = factor(order_dow, levels = c("Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"))
+  ) %>% 
   filter(product_name == "Pink Lady Apples" | product_name == "Coffee Ice Cream") %>%
   group_by(product_name, order_dow) %>% 
-  summarize(mean_time = round(mean(order_hour_of_day, na.rm = TRUE), digits = 1)) %>% 
+  summarize(mean_time = mean(order_hour_of_day, na.rm = TRUE)) %>% 
   spread(key = order_dow, value = mean_time) %>% 
-  knitr::kable()
+  knitr::kable(digits = 1)
 ```
 
-| product\_name    |     0|     1|     2|     3|     4|     5|     6|
-|:-----------------|-----:|-----:|-----:|-----:|-----:|-----:|-----:|
-| Coffee Ice Cream |  13.8|  14.3|  15.4|  15.3|  15.2|  12.3|  13.8|
-| Pink Lady Apples |  13.4|  11.4|  11.7|  14.2|  11.6|  12.8|  11.9|
+| product\_name    |  Sunday|  Monday|  Tuesday|  Wednesday|  Thursday|  Friday|  Saturday|
+|:-----------------|-------:|-------:|--------:|----------:|---------:|-------:|---------:|
+| Coffee Ice Cream |    13.8|    14.3|     15.4|       15.3|      15.2|    12.3|      13.8|
+| Pink Lady Apples |    13.4|    11.4|     11.7|       14.2|      11.6|    12.8|      11.9|
 
 On most days of a week, the mean hour at which Pink Lady Apples is ordered is earlier than that and at which Coffee Ice Cream is ordered.
 
@@ -403,9 +332,17 @@ skimr::skim(ny_noaa)
     ##  <U+2587><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581>
     ##  <U+2587><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581>
 
+``` r
+n_all_missing = ny_noaa %>% 
+  filter(is.na(tmax) & is.na(tmin) & is.na(prcp) & is.na(snow) & is.na(snwd)) %>% 
+  nrow()
+```
+
 Write a short description of the dataset, noting the size and structure of the data, describing some key variables, and indicating the extent to which missing data is an issue.
 
-The NY NOAA data has 2595176 observations and 7 variables. Variables for `id`, `tmax` and `tmin` are class `character`. Variables for `prcp`, `snow` and `snwd` are class `integer`. Variable for `date` is class `Date`.
+The NY NOAA data has 2595176 observations and 7 variables. Variables for `id`, `tmax` and `tmin` are class `character`. Variables for `prcp`, `snow` and `snwd` are class `integer`. Variable for `date` is class `Date`. The medians of precipitation, snowfall and snow depth during the study period are all 0. The data was collected from 747 unique weather stations.
+
+There are 72278 obseravtions containing no information about temperature, precipitation, snowfall or snow depth, which is about 0.03 of all observaions. The proportion of missing data of `tmax` is 0.44. The proportion of missing data of `tmin` is 0.44. The proportion of missing data of `prcp` is 0.06. The proportion of missing data of `snow` is 0.15. The proportion of missing data of `snwd` is 0.23. In my opinion, if more than 1/5 of data are missiong, it would become an issue. And whether missing data is an issue also depends on whether the data is randomly missing or non-randomly.
 
 Clean the NY NOAA data
 ----------------------
@@ -443,16 +380,20 @@ The code chunk below makes a two-panel plot showing the average max temperature 
 ``` r
 ny_noaa %>% 
   filter(month %in% c("01", "07")) %>% 
-  group_by(month, id, year) %>%
+  group_by(month, year, id) %>%
   summarize(tmax_mean = mean(tmax, na.rm = T)) %>%
-  ggplot(aes(x = year, y = tmax_mean, fill = year)) +
-  geom_violin() +
-  facet_grid(~month)
+  ggplot(aes(x = factor(year), y = tmax_mean)) +
+  geom_boxplot() +
+  facet_grid(~month) +
+  labs(x = "Year", y = "The average max temperature", 
+       title = "The average max temperature in January and in July in each station across years")
 ```
 
-    ## Warning: Removed 5970 rows containing non-finite values (stat_ydensity).
+    ## Warning: Removed 5970 rows containing non-finite values (stat_boxplot).
 
 ![](p8105_hw3_yh3094_files/figure-markdown_github/tmax_jan_july-1.png)
+
+The average max temperature in January and in July fluctuated a lot across years. In January, except in 1981, 1985, 1989, 1997 and 2006, all other years had outliers. In July, except in 1992, 1997, 1999, 2009 and 2010, all other years had outliers.
 
 Make a two-panel plot
 ---------------------
@@ -476,3 +417,5 @@ tmax_tmin + snowfall
     ## Warning: Removed 1136276 rows containing non-finite values (stat_binhex).
 
 ![](p8105_hw3_yh3094_files/figure-markdown_github/tmax_tmin_snowfall-1.png)
+
+Tmin had the positive relationship with tmax. And The distribution of snowfall values greater than 0 and less than 100 remained almost the same across years.
