make some corrections to problem3 and ensure plots readable

--- a/p8105_hw3_yh3094.md
+++ b/p8105_hw3_yh3094.md
@@ -63,7 +63,7 @@ brfss_data %>%
   summarize(n_location = n_distinct(locationdesc)) %>% 
   ggplot(aes(x = year, y = n_location, color = locationabbr)) +
   geom_line() +
-  labs(title = "The spaghetti plot")
+  labs(title = "The number of locations in each state from 2002 to 2010")
 ```
 
 ![](p8105_hw3_yh3094_files/figure-markdown_github/spaghetti_plot-1.png)
@@ -134,7 +134,8 @@ brfss_data %>%
   geom_violin(aes(fill = factor(year))) +
   stat_summary(fun.y = median, geom = "point") +
   theme(axis.text.x = element_text(angle = 60, hjust = 1)) +
-  labs(x = "Year", y = "State-level averages", title = "The five-panel plot")
+  labs(x = "Year", y = "State-level averages", 
+       title = "The distribution of the state-level response averages over time")
 ```
 
 ![](p8105_hw3_yh3094_files/figure-markdown_github/five_panel_plot-1.png)
@@ -194,9 +195,9 @@ Write a short description of the dataset, noting the size and structure of the d
 
 The Instacart data has 1384617 observations and 15 variables. Variables for `aisle`, `department`, `eval_set` and `product_name` are class `character` and other variables are class `integer`. The dataset contains products of 39,123 different names bought from 134 different aisles within 21 departments. 0.6 of all items ordered have been ordered by the user in the past. Among those items which have been ordered before, Banana is the most popular. Most orders were placed at 14 ± 4.2 hours of the day.
 
-The first observation is Bulgarian Yogurt (product id: 49302) bought from the yogurt aisle (aisle id: 120) of the dairy eggs department (department id: 16) by the user whose id is 112108. The order (order id: 1) was placed at 10 on Thursday. The order sequence number for this user is 4. This product was the first product added to cart by this user and has been ordered before. 9 days has past since the last order placed by this user. The evaluation set this order belongs in is train.
+The first observation is Bulgarian Yogurt (product id: 49302) bought from the yogurt aisle (aisle id: 120) of the dairy eggs department (department id: 16) by the user whose id is 112108. The order (order id: 1) was placed at 10 on Thursday. The order sequence number for this user is 4. This product was the first product added to cart by this user and has been ordered before. 9 days have past since the last order placed by this user. The evaluation set this order belongs in is train.
 
-The ninth observation is Grated Pecorino Romano Cheese (product id: 39612) bought from the specialty cheeses aisle (aisle id: 2) of the dairy eggs department (department id: 16) by the user whose id is 79431. The order (order id: 36) was placed at 18 on Saturday. The order sequence number for this user is 23. This product was the first product added to cart by this user and hasn't been ordered before. 30 days has past since the last order placed by this user. The evaluation set this order belongs in is train.
+The ninth observation is Grated Pecorino Romano Cheese (product id: 39612) bought from the specialty cheeses aisle (aisle id: 2) of the dairy eggs department (department id: 16) by the user whose id is 79431. The order (order id: 36) was placed at 18 on Saturday. The order sequence number for this user is 23. This product was the first product added to cart by this user and hasn't been ordered before. 30 days have past since the last order placed by this user. The evaluation set this order belongs in is train.
 
 Calculate the number of aisles and find out the most frequent
 -------------------------------------------------------------
@@ -349,10 +350,19 @@ Clean the NY NOAA data
 ----------------------
 
 ``` r
-ny_noaa = ny_noaa %>% 
-  separate(col = date, into = c("year", "month", "day"), sep = "-")
+## Convert tmax and tmin to numerical variable
 ny_noaa$tmax = as.numeric(ny_noaa$tmax)
 ny_noaa$tmin = as.numeric(ny_noaa$tmin)
+
+ny_noaa = ny_noaa %>% 
+  ## Create separate variables for year, month, and day
+  separate(col = date, into = c("year", "month", "day"), sep = "-") %>% 
+  ## Ensure reasonable units
+  mutate(
+    tmax = tmax/10,
+    tmin = tmin/10,
+    prcp = prcp/10
+  )
 ```
 
 The most commonly observed value for snowfall
@@ -388,7 +398,7 @@ ny_noaa %>%
   facet_grid(~month) +
   theme(axis.text.x = element_text(angle = 60, hjust = 1)) +
   labs(x = "Year", y = "The average max temperature", 
-       title = "The average max temperature in January and in July in each station across years")
+       title = "The average max temperature in January and July in each station across years")
 ```
 
     ## Warning: Removed 5970 rows containing non-finite values (stat_boxplot).
