--- a/p8105_hw3_yh3094.Rmd
+++ b/p8105_hw3_yh3094.Rmd
@@ -54,7 +54,7 @@ brfss_data %>%
   summarize(n_location = n_distinct(locationdesc)) %>% 
   ggplot(aes(x = year, y = n_location, color = locationabbr)) +
   geom_line() +
-  labs(title = "The spaghetti plot")
+  labs(title = "The number of locations in each state from 2002 to 2010")
 ```
 
 From 2002 to 2010, the number of locations in most states was fewer than 10. In FL, the number of locations had the biggest change over time. Before 2007, the number of locations in FL was fewer than 10 each year, while in 2007, the number of locations in FL was up to 44. Then, the number of locations in FL decreased to fewer than 10 again. However, in 2010, the number of locations in FL increased to 41. 
@@ -98,7 +98,8 @@ brfss_data %>%
   geom_violin(aes(fill = factor(year))) +
   stat_summary(fun.y = median, geom = "point") +
   theme(axis.text.x = element_text(angle = 60, hjust = 1)) +
-  labs(x = "Year", y = "State-level averages", title = "The five-panel plot")
+  labs(x = "Year", y = "State-level averages", 
+       title = "The distribution of the state-level response averages over time")
 ```
 
 The state-level average proportion of “Very good” responses remained highest compared with that of other response categories over time. And the state-level average proportion of “Poor” responses remained lowest over time. For all response categories, these state-level averages didn't change much over time.
@@ -117,9 +118,9 @@ Write a short description of the dataset, noting the size and structure of the d
 
 The Instacart data has `r nrow(instacart)` observations and `r ncol(instacart)` variables. Variables for `aisle`, `department`, `eval_set` and `product_name` are class `character` and other variables are class `integer`. The dataset contains products of 39,123 different names bought from 134 different aisles within 21 departments. `r round(sum(instacart$reordered == 1)/nrow(instacart), digits = 2)` of all items ordered have been ordered by the user in the past. Among those items which have been ordered before, `r (instacart %>% filter(reordered == 1) %>% count(product_name) %>% top_n(1))[[1]]` is the most popular. Most orders were placed at $14\pm4.2$ hours of the day. 
 
-The first observation is `r instacart$product_name[1]` (product id: `r instacart$product_id[1]`) bought from the `r instacart$aisle[1]` aisle (aisle id: `r instacart$aisle_id[1]`) of the `r instacart$department[1]` department (department id: `r instacart$department_id[1]`) by the user whose id is `r instacart$user_id[1]`. The order (order id: `r instacart$order_id[1]`) was placed at `r instacart$order_hour_of_day[1]` on Thursday. The order sequence number for this user is `r instacart$order_number[1]`. This product was the first product added to cart by this user and has been ordered  before. `r instacart$days_since_prior_order[1]` days has past since the last order placed by this user. The evaluation set this order belongs in is `r instacart$eval_set[1]`. 
+The first observation is `r instacart$product_name[1]` (product id: `r instacart$product_id[1]`) bought from the `r instacart$aisle[1]` aisle (aisle id: `r instacart$aisle_id[1]`) of the `r instacart$department[1]` department (department id: `r instacart$department_id[1]`) by the user whose id is `r instacart$user_id[1]`. The order (order id: `r instacart$order_id[1]`) was placed at `r instacart$order_hour_of_day[1]` on Thursday. The order sequence number for this user is `r instacart$order_number[1]`. This product was the first product added to cart by this user and has been ordered  before. `r instacart$days_since_prior_order[1]` days have past since the last order placed by this user. The evaluation set this order belongs in is `r instacart$eval_set[1]`. 
 
-The ninth observation is `r instacart$product_name[9]` (product id: `r instacart$product_id[9]`) bought from the `r instacart$aisle[9]` aisle (aisle id: `r instacart$aisle_id[9]`) of the `r instacart$department[9]` department (department id: `r instacart$department_id[9]`) by the user whose id is `r instacart$user_id[9]`. The order (order id: `r instacart$order_id[9]`) was placed at `r instacart$order_hour_of_day[9]` on Saturday. The order sequence number for this user is `r instacart$order_number[9]`. This product was the first product added to cart by this user and hasn't been ordered  before. `r instacart$days_since_prior_order[9]` days has past since the last order placed by this user. The evaluation set this order belongs in is `r instacart$eval_set[9]`. 
+The ninth observation is `r instacart$product_name[9]` (product id: `r instacart$product_id[9]`) bought from the `r instacart$aisle[9]` aisle (aisle id: `r instacart$aisle_id[9]`) of the `r instacart$department[9]` department (department id: `r instacart$department_id[9]`) by the user whose id is `r instacart$user_id[9]`. The order (order id: `r instacart$order_id[9]`) was placed at `r instacart$order_hour_of_day[9]` on Saturday. The order sequence number for this user is `r instacart$order_number[9]`. This product was the first product added to cart by this user and hasn't been ordered  before. `r instacart$days_since_prior_order[9]` days have past since the last order placed by this user. The evaluation set this order belongs in is `r instacart$eval_set[9]`. 
 
 ## Calculate the number of aisles and find out the most frequent
 
@@ -136,7 +137,7 @@ There are 134 aisles. Fresh vegetables is the aisle which the most items ordered
 
 The code chunk below makes a plot that shows the number of items ordered in each aisle. Order aisles sensibly, and organize your plot so others can read it.
 
-```{r aisle_plot}
+```{r aisle_plot, fig.width=15}
 instacart %>%
   count(aisle) %>%
   ggplot(aes(x = forcats::fct_reorder(aisle, n), y = n)) +
@@ -210,10 +211,19 @@ There are `r n_all_missing` obseravtions containing no information about tempera
 ## Clean the NY NOAA data
 
 ```{r ny_noaa_data_clean}
-ny_noaa = ny_noaa %>% 
-  separate(col = date, into = c("year", "month", "day"), sep = "-")
+## Convert tmax and tmin to numerical variable
 ny_noaa$tmax = as.numeric(ny_noaa$tmax)
 ny_noaa$tmin = as.numeric(ny_noaa$tmin)
+
+ny_noaa = ny_noaa %>% 
+  ## Create separate variables for year, month, and day
+  separate(col = date, into = c("year", "month", "day"), sep = "-") %>% 
+  ## Ensure reasonable units
+  mutate(
+    tmax = tmax/10,
+    tmin = tmin/10,
+    prcp = prcp/10
+  )
 ```
 
 ## The most commonly observed value for snowfall
@@ -240,7 +250,7 @@ ny_noaa %>%
   facet_grid(~month) +
   theme(axis.text.x = element_text(angle = 60, hjust = 1)) +
   labs(x = "Year", y = "The average max temperature", 
-       title = "The average max temperature in January and in July in each station across years")
+       title = "The average max temperature in January and July in each station across years")
 ```
 
 The average max temperature in January and in July fluctuated a lot across years. In January, except in 1981, 1985, 1989, 1997 and 2006, all other years had outliers. In July, except in 1992, 1997, 1999, 2009 and 2010, all other years had outliers. 
